# person-enrollment-robot-computer-vision-ollama

./: .gitignore  README.md
src/vision_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vision_robot/launch/: fixed_launch.launch.py  full_system.launch.py  new_robot.launch.py  vision_robot.launch.py
src/vision_robot/msg/: PersonInfo.msg
src/vision_robot/scripts/: face_enrollment_node.py  face_gesture_node.py  llm_node.py  navigation_controller.py  person_recognition_node.py  speech_node.py  speech_recognition_node.py
src/vision_robot/vision_robot/scripts/: face_gesture_node.py  person_recognition_node.py  speech_node.py
