<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_robot</name>
  <version>0.0.0</version>
  <description>ROS2 computer vision package for mobile robot with face recognition and person identification</description>
  <maintainer email="142438943+Naman-Harshwal@users.noreply.github.com">comp-point</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-gtts</exec_depend>
  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>
  <exec_depend>python3-mediapipe</exec_depend>
  <exec_depend>python3-dlib</exec_depend>
  <exec_depend>python3-pydub</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>
  
  <!-- New dependencies for voice and LLM -->
  <exec_depend>python3-speechrecognition</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-transformers</exec_depend>
  <exec_depend>ollama</exec_depend>  <!-- Note: This might need manual installation -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
